--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
-VITE_BACKEND_URL=http://localhost:3000
+VITE_BACKEND_URL=https://ink2image-1.onrender.com
 VITE_RAZORPAY_KEY_ID=rzp_test_yCdJquTC727i5J
